--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "polydiv",
   "description": "Clipping html element in random polygon",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": "ISC",
   "homepage": "https://github.com/radiium/polydiv",
   "repository": {
@@ -22,7 +22,7 @@
   "main": "polydiv.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dist": "uglifyjs --compress --mangle -o polydiv.min.js --comments `/^!/`-- polydiv.js "
+    "dist": "npx uglifyjs --compress --mangle -o polydiv.min.js --comments -- polydiv.js "
   },
   "devDependencies": {
     "uglify-js": "^3.4.9"
